--- a/EncryptedChat.Client/MainWindow.xaml
+++ b/EncryptedChat.Client/MainWindow.xaml
@@ -12,104 +12,81 @@
     MinWidth="800"
     MinHeight="200"
     Background="#FF2A2F33"
+    WindowStyle="None"
     mc:Ignorable="d">
     <Window.DataContext>
         <vm:MainViewModel />
     </Window.DataContext>
     <Window.Resources>
-        <local:DateTimeConverter x:Key="DateTimeConverter" />
-
-        <Style TargetType="Label">
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="FontWeight" Value="DemiBold" />
-            <Setter Property="Foreground" Value="White" />
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="FontSize" Value="15" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="FontSize" Value="17" />
-            <Setter Property="Margin" Value="0,0,10,0" />
-            <Setter Property="MinWidth" Value="120" />
-            <Setter Property="MaxHeight" Value="25" />
-            <Setter Property="Background" Value="#FF39AE9E" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="Black"
-                            BorderThickness="1">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#FF5BE6D3" />
-                </Trigger>
-
-            </Style.Triggers>
-        </Style>
-
-        <Style x:Key="AuthorStyle" TargetType="TextBlock">
-            <Setter Property="Foreground" Value="Aqua" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="TextDecorations" Value="Underline" />
-            <Setter Property="FontFamily" Value="Franklin Gothic Medium" />
-        </Style>
-
-        <Style
-            x:Key="SendTimeStyle"
-            BasedOn="{StaticResource AuthorStyle}"
-            TargetType="TextBlock">
-            <Setter Property="FontSize" Value="10" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="TextDecorations" Value="{x:Null}" />
-        </Style>
-
-        <Style x:Key="MessageStyle" TargetType="TextBlock">
-            <Setter Property="MaxWidth" Value="500" />
-            <Setter Property="TextWrapping" Value="Wrap" />
-            <Setter Property="FontFamily" Value="Verdana" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Foreground" Value="White" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/TextResources.xaml" />
+                <ResourceDictionary Source="/Resources/ButtonsResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <DockPanel Grid.Row="0" Margin="0,10,0,0">
+        <DockPanel Grid.Row="0" MouseDown="DockPanel_MouseDown">
+            <DockPanel.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="1" Color="#FF2A2F33" />
+                    <GradientStop Color="#FF39AE9E" />
+                </LinearGradientBrush>
+            </DockPanel.Background>
+            <WrapPanel
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Orientation="Horizontal">
+                <Button Content="___" />
+                <Button Content="⬜" />
+                <Button Content="X" />
+            </WrapPanel>
+        </DockPanel>
+
+        <DockPanel Grid.Row="1" Margin="0,10,0,0">
             <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <Label Content="Host:" />
-                <TextBox MinWidth="150" Text="192.168.0.1" />
+                <TextBox
+                    Height="23"
+                    MinWidth="150"
+                    Template="{StaticResource TextBoxBaseControlTemplate}"
+                    Text="192.168.0.1" />
             </StackPanel>
             <StackPanel Margin="10,0,0,0" Orientation="Horizontal">
                 <Label Content="Port:" />
-                <TextBox Width="70" />
+                <TextBox
+                    Width="70"
+                    Height="23"
+                    Template="{StaticResource TextBoxBaseControlTemplate}" />
             </StackPanel>
             <StackPanel Margin="10,0,0,0" Orientation="Horizontal">
                 <Label Content="Login:" />
-                <TextBox Width="100" />
+                <TextBox
+                    Width="100"
+                    Height="23"
+                    Template="{StaticResource TextBoxBaseControlTemplate}" />
             </StackPanel>
 
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                <Button Content="Disconnect" />
-                <Button Command="{Binding ConnectCommand}" Content="Connect" />
+                <Button
+                    Command="{Binding DisconnectCommand}"
+                    Content="Disconnect"
+                    Style="{StaticResource CommandButton}" />
+                <Button
+                    Command="{Binding ConnectCommand}"
+                    Content="Connect"
+                    Style="{StaticResource CommandButton}" />
             </StackPanel>
         </DockPanel>
 
-        <DockPanel Grid.Row="1" Margin="5,10,5,5">
+        <DockPanel Grid.Row="2" Margin="5,10,5,5">
             <ScrollViewer x:Name="Scroller" VerticalScrollBarVisibility="Auto">
                 <ItemsControl x:Name="MessagesItems" ItemsSource="{Binding Messages}">
                     <ItemsControl.ItemTemplate>
@@ -140,21 +117,17 @@
             </ScrollViewer>
         </DockPanel>
 
-        <Grid
-            Grid.Row="2"
-            Height="30"
-            Margin="10,10,10,10">
+        <Grid Grid.Row="3" Margin="10,10,10,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <TextBox Grid.Column="0" HorizontalAlignment="Stretch" />
-            <Button
-                Grid.Column="1"
-                MaxWidth="200"
-                Margin="5,0,5,0"
-                Content="Send" />
+            <TextBox
+                VerticalContentAlignment="Center"
+                Template="{StaticResource TextBoxBaseControlTemplate}"
+                Text="qetewtqwet" />
+            <Button Grid.Column="1" Style="{StaticResource SendButton}" />
         </Grid>
     </Grid>
 </Window>
