--- a/EncryptedChat.Client/MainWindow.xaml
+++ b/EncryptedChat.Client/MainWindow.xaml
@@ -2,9 +2,6 @@
     x:Class="EncryptedChat.Client.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:EncryptedChat.Client"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:EncryptedChat.Client.ViewModels"
     Title="MainWindow"
     Width="800"
@@ -12,8 +9,7 @@
     MinWidth="800"
     MinHeight="200"
     Background="#FF2A2F33"
-    WindowStyle="None"
-    mc:Ignorable="d">
+    WindowStyle="None">
     <Window.CommandBindings>
         <CommandBinding
             CanExecute="CanExecute"
