--- a/EncryptedChat.Client/Resources/ButtonsResources.xaml
+++ b/EncryptedChat.Client/Resources/ButtonsResources.xaml
@@ -30,9 +30,7 @@
         </Style.Triggers>
     </Style>
 
-    <Style
-        x:Key="SendButton"
-        TargetType="Button">
+    <Style x:Key="SendButton" TargetType="Button">
         <Setter Property="MinWidth" Value="70" />
         <Setter Property="Margin" Value="5" />
         <Setter Property="BorderThickness" Value="0" />
