--- a/EncryptedChat.Client/App.xaml
+++ b/EncryptedChat.Client/App.xaml
@@ -1,9 +1,7 @@
-﻿<Application x:Class="EncryptedChat.Client.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:EncryptedChat.Client"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="EncryptedChat.Client.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Startup="OnStartup">
+    <Application.Resources />
 </Application>
