--- a/EncryptedChat.Client/Resources/TextResources.xaml
+++ b/EncryptedChat.Client/Resources/TextResources.xaml
@@ -1,18 +1,19 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:EncryptedChat.Client">
+    xmlns:converters="clr-namespace:EncryptedChat.Client.Converters">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="CommonResources.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-
+    <converters:EmptyTextConverter x:Key="EmptyTextConverter" />
     <converters:DateTimeConverter x:Key="DateTimeConverter" />
 
     <Style TargetType="Label">
         <Setter Property="FontSize" Value="16" />
         <Setter Property="FontWeight" Value="DemiBold" />
         <Setter Property="Foreground" Value="White" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
 
     <Style TargetType="TextBox">
