--- a/EncryptedChat.Client/View/MainWindow.xaml
+++ b/EncryptedChat.Client/View/MainWindow.xaml
@@ -1,8 +1,7 @@
 ﻿<Window
-    x:Class="EncryptedChat.Client.MainWindow"
+    x:Class="EncryptedChat.Client.View.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="clr-namespace:EncryptedChat.Client.ViewModels"
     Title="MainWindow"
     Width="800"
     Height="450"
@@ -10,23 +9,6 @@
     MinHeight="200"
     Background="#FF2A2F33"
     WindowStyle="None">
-    <Window.CommandBindings>
-        <CommandBinding
-            CanExecute="CanExecute"
-            Command="{x:Static SystemCommands.CloseWindowCommand}"
-            Executed="CloseWindow" />
-        <CommandBinding
-            CanExecute="CanExecute"
-            Command="{x:Static SystemCommands.MaximizeWindowCommand}"
-            Executed="MaximizeWindow" />
-        <CommandBinding
-            CanExecute="CanExecute"
-            Command="{x:Static SystemCommands.MinimizeWindowCommand}"
-            Executed="MinimizeWindow" />
-    </Window.CommandBindings>
-    <Window.DataContext>
-        <vm:MainViewModel />
-    </Window.DataContext>
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -37,7 +19,7 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
@@ -84,9 +66,9 @@
                 HorizontalAlignment="Right"
                 VerticalAlignment="Top"
                 Orientation="Horizontal">
-                <Button Command="{x:Static SystemCommands.MinimizeWindowCommand}" Content="___" />
-                <Button Command="{x:Static SystemCommands.MaximizeWindowCommand}" Content="⬜" />
-                <Button Command="{x:Static SystemCommands.CloseWindowCommand}" Content="X" />
+                <Button Click="MinimizeWindow" Content="___" />
+                <Button Click="MaximizeWindow" Content="⬜" />
+                <Button Click="CloseWindow" Content="X" />
             </WrapPanel>
         </DockPanel>
 
@@ -116,7 +98,10 @@
                     Text="{Binding Login}" />
             </StackPanel>
 
-            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+            <StackPanel
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
                 <Button
                     Command="{Binding DisconnectCommand}"
                     Content="Disconnect"
@@ -127,6 +112,20 @@
                     Content="Connect"
                     IsEnabled="{Binding Connected}"
                     Style="{StaticResource CommandButton}" />
+                <Ellipse Width="30" Height="30">
+                    <Ellipse.Style>
+                        <Style TargetType="{x:Type Ellipse}">
+                            <Setter Property="Fill" Value="Red" />
+                            <Setter Property="Stroke" Value="White" />
+                            <Setter Property="StrokeThickness" Value="2" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding CanDisconnect}" Value="True">
+                                    <Setter Property="Fill" Value="Green" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Ellipse.Style>
+                </Ellipse>
             </StackPanel>
         </DockPanel>
 
@@ -170,10 +169,11 @@
             <TextBox
                 VerticalContentAlignment="Center"
                 Template="{StaticResource TextBoxBaseControlTemplate}"
-                Text="{Binding Text}" />
+                Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" />
             <Button
                 Grid.Column="1"
                 Command="{Binding SendMessageCommand}"
+                IsEnabled="{Binding Text, Converter={StaticResource EmptyTextConverter}}"
                 Style="{StaticResource SendButton}" />
         </Grid>
     </Grid>
